TST-227 Fixed issue with modal continue button getting cut off Removed max-height on the modals

--- a/assets/scss/custom/layout/_find-modals.scss
+++ b/assets/scss/custom/layout/_find-modals.scss
@@ -4,6 +4,7 @@
 
 #modal {
     border-radius: 5px;
+    max-height:none;
     min-height:0;
     width: 100%;
     .modal-close {
